// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MenuLink /> renders link 1`] = `
<Styled(a)
  data-test-menu-link={true}
  href="/abc"
  onClick={[MockFunction]}
  target="_self"
>
  <i
    className="material-icons-outlined"
  >
    phone
  </i>
  Call me
</Styled(a)>
`;

exports[`<MenuLink /> renders link with a provided target 1`] = `
<Styled(a)
  data-test-menu-link={true}
  href="/abc"
  onClick={[MockFunction]}
  target="_blank"
>
  <i
    className="material-icons-outlined"
  >
    phone
  </i>
  Call me
</Styled(a)>
`;
